# rgcompiler

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
src/rgcompiler/: __main__.py  json.py  project.py  ruby_types.py  tileset.py  util.py
src/rgcompiler/cli/: decompile_maps.py  disassemble_autotiles.py  dump_json.py  generate_tilesets.py  roundtrip.py  verify_maps.py
src/rgcompiler/debug/: decompile_maps.py  dump_json.py  generate_tilesets.py  render_map.py  roundtrip.py  verify_maps.py
src/rgcompiler/map/: decompiler.py  layout.py  tileset.py
src/rgcompiler/ruby/: __init__.py  rpg.py
src/rgcompiler/ruby/rpg/: __init__.py  event.py  event_commands.py  map.py  tileset.py
src/rgss/: __init__.py  json.py  types.py  util.py
src/rgss/rpg/: __init__.py  event.py  event_commands.py  map.py  misc.py  moves.py  tileset.py
src/rgss/rpg/commands/: __init__.py  base.py  branch.py  dialogue.py  effects.py  flow.py  misc.py  move.py  transfer.py  vars.py
src/rhodochrosite/: __init__.py  cursor.py  exc.py  reader.py  ruby.py  writer.py
src/rhodochrosite/cli/: dump_json.py
tests/rgcompiler/: test_rgss_table.py  test_ruby_types.py
tests/rgss/: test_map_event_roundtripping.py  test_ruby_types.py
tests/rhodochrosite/: test_basic_unmarshal.py  test_edge_cases.py  test_finding_ivars.py  test_user_unmarshal.py
tests/rhodochrosite/remarshal/: test_custom_marshal.py  test_marshal_objects.py  test_marshal_primitives.py  test_roundtrip.py
tests/rhodochrosite/unmarshal/: test_basic_unmarshal.py  test_edge_cases.py  test_user_unmarshal.py
